# LibreFractals

./: README.md  build-wasm.sh  index.html  main-2CFJA3PG.js  main-2EWEXPL2.js  main-3PTY5CB5.js  main-4L7P5LQT.js  main-76OS5PQN.js  main-7AN2EPP6.js  main-B5OVSWBX.js  main-CWM2XMOM.js  main-CXX6PA2X.js  main-FVB2TBMI.js  main-GVCRW3F4.js  main-LPTIEZMA.js  main-MIEPRV3A.js  main-NZ5TWX6Z.js  main-TDAFVSCT.js  main-U6L24OT4.js  main-WDTHWQEG.js  styles-3BKH5XVI.css  worker-O5KS6BRS.js  worker-PS6KX5AZ.js  worker-TMA3Y3UV.js
.github/workflows/: backend-deploy.yml
backend/: .clang-tidy  .clangd  .dockerignore  CMakeLists.txt  Dockerfile
backend/cmake/: yaml-cpp-config.cmake
backend/k8s/: backend-deployment.yaml  backend-service.yaml  clusterissuer.yaml  ingress.yaml
backend/src/: CMakeLists.txt  main.cpp
backend/src/controllers/: gallery.cpp  gallery.hpp
backend/src/math/: genealogy.cpp  genealogy.hpp
backend/src/routes/: gallery.cpp  gallery.hpp
backend/src/store/: gallery.cpp  gallery.hpp
backend/src/util/: encoding.cpp  encoding.hpp  http.cpp  http.hpp  json.cpp  json.hpp
compiler/: .clangd  .gitignore  CMakeLists.txt
compiler/src/: CMakeLists.txt  main.cpp
compiler/src/lsp/: completions.cpp  completions.hpp  diagnostics.cpp  diagnostics.hpp  hover.cpp  hover.hpp  json.hpp
compiler/src/parser/: codegen.cpp  codegen.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
compiler/src/renderer/: audio.cpp  audio.hpp  midi.cpp  midi.hpp  svg.cpp  svg.hpp
frontend/: .prettierignore  .prettierrc  angular.json  eslint.config.js  package-lock.json  package.json  proxy.conf.json  tsconfig.json
frontend/scripts/: pre-commit.sh
frontend/src/: frac.d.ts  index.html
frontend/src/app/: app.html  app.scss  app.spec.ts  app.ts
frontend/src/app/audio-player/: audio-player.html  audio-player.scss  audio-player.ts
frontend/src/app/editor/: editor.scss  editor.ts  extensions.ts  lsp-utils.ts
frontend/src/app/examples/: dragon.frac  koch_snowflake.frac  plant.frac  sierpinski.frac  song.frac  stochastic_tree.frac
frontend/src/app/fractal/: compiler.worker.ts  fractal.service.ts
frontend/src/app/gallery/: gallery-entry.component.html  gallery-entry.component.scss  gallery-entry.component.ts  gallery.component.html  gallery.component.scss  gallery.component.ts  gallery.service.ts
frontend/src/app/resize-handle/: resize-handle.scss  resize-handle.ts
frontend/src/app/sidebar/: sidebar.html  sidebar.scss  sidebar.ts
frontend/src/app/svg-viewer/: svg-viewer.html  svg-viewer.scss  svg-viewer.ts
frontend/src/app/utils/: url-state.ts
frontend/src/environments/: environment.prod.ts
scripts/: pre-commit.sh
wasm/: LibreFractals.js  LibreFractals.wasm
website/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.spec.json
website/src/: frac.d.ts
website/src/app/: app.html  app.scss  app.spec.ts  app.ts  compiler.worker.ts  fractal.service.ts
website/src/app/audio-player/: audio-player.html  audio-player.ts
website/src/app/editor/: editor.scss  editor.ts  extensions.ts  lsp-utils.ts
website/src/app/examples/: koch_curve.frac  song.frac
